<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">投资快报</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_news_category_kuaibao">今日快报</string>
    <string name="title_news_category_kuaixun">投资快讯</string>
    <string name="title_news_category_meitu">美图在线</string>
    <string name="title_news_category_guangbo">广播</string>
    <string name="title_news_category_jiemujieshao">节目介绍</string>
    <string name="title_news_category_jiemudianbo">节目点播</string>
    <string name="title_news_category_finance">财经</string>
    <string name="title_news_category_science">科技</string>
    <string name="title_news_category_more">更多</string>
    <string name="news_top_left_text">新闻</string>
    <string name="topic_top_left_text">话题</string>
    <string name="picture_top_left_text">图片</string>
    <string name="follow_top_left_text">跟帖</string>
    <string name="vote_top_left_text">投票</string>
    <string name="data_decode_text">数据解码</string>
    <string name="touzikuaixun_text">投资快讯</string>
    <string name="jinrikuaibao_text">今日快报</string>
    <string name="company_radar_text">公司雷达</string>
    <string name="gushiguangbo_text">股市广播</string>
    <string name="hudongshequ_text">互动诊股</string>
    <string name="shishijujiao">时事聚焦</string>
    <string name="meituzaixian_text">美图在线</string>
    <string name="guangbo_text">广播</string>
    <string name="jiemujieshao_text">节目介绍</string>
    <string name="jiemudianbo_text">节目点播</string>
    <string name="touzineican_text">投资内参</string>
    <string name="shezhi_text">设置</string>
    <string name="login_label_username">帐号:</string>
    <string name="login_label_password">密码:</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">请输入您的手机号</string>
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="userName_label">用户名</string>
    <string name="password_lable">密码</string>
    <string name="password2_lable">确认密码</string>
    <string name="autopassword_label">默认密码为手机后六位</string>
    <string name="clearAll">清空</string>
    <string name="suggust_userName">用户名不能为空</string>
    <string name="suggust_passwordNotEmpty">密码不能为空</string>
    <string name="suggest_passwordNotSame">两次输入的密码不一致</string>
    <string name="loginRegister">注册</string>
    <string name="account_title">用户管理</string>
    <string name="account_name">用户名</string>
    <string name="account_editname">请输入您的手机号</string>
    <string name="account_password_old">原密码</string>
    <string name="account_editpassword_old">请输入旧密码</string>
    <string name="account_password_new">新密码</string>
    <string name="account_editpassword_new">请输入新密码</string>
    <string name="account_password_confirm">确认密码</string>
    <string name="account_editpassword_new1">再次输入新密码</string>
    <string name="modify_passwd">修改密码</string>
    <string name="collect_article">文章</string>
    <string name="collect_Picture">图片</string>
    <string name="collect_title">用户收藏</string>
    <string name="offlineload_title">离线加载</string>
    <string name="about_title">关于</string>
    <string name="feedback_title">意见</string>
    <string name="feedback_text">请输入您的宝贵意见</string>
    <string name="setting_title">设置</string>
    <string name="setting_xiugai">修改密码</string>
    <string name="setting_star">收藏</string>
    <string name="setting_tuisong">接收推送</string>
    <string name="setting_lixianjiazai">离线加载</string>
    <string name="setting_yijian">意见反馈</string>
    <string name="setting_about">关于</string>
    <string name="setting_tuichu">退出登录</string>
    <string name="interactive_text">欢迎使用诊股平台，请在下方按提示输入相关信息</string>
    <string name="interactive_btn">提交</string>
    <!-- 广播流量提示 -->
    <string name="msg_radio_head_tips">需要在3G或wifi下收听。3G造成流量费用由运营商收取。</string>
    <string name="msg_click_begin">点击开始</string>
    <string name="msg_click_cencel">点击取消</string>
    <string name="weixin">微信</string>
    <string name="t_weibo">腾讯微博</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="stock_operation_unscramble">操盘解读</string>
    <string name="weinxin_friends">朋友圈</string>

</resources>