<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

	<!-- 标题栏 -->
    <RelativeLayout
          android:id="@+id/layout_top"
          android:layout_width="match_parent"
          android:layout_height="50dip"
          android:background="@drawable/tbarbg" >

          <!-- 用户管理 -->
          <TextView
              android:id="@+id/textView1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:text="@string/account_title"
              android:textColor="@color/white"
              android:textSize="20sp" />
            
          <!-- 显示右边框按钮 -->
          <ImageButton
              android:id="@+id/showRight"
              android:layout_width="46dip"
              android:layout_height="43dip"
              android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
              android:layout_marginRight="5dp"
              android:background="@drawable/bg_radiobtn_normal"
              android:src="@drawable/more" />
     </RelativeLayout>
    
    <!-- 下面正式内容 -->
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
			<!-- 用户头像框 -->
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="60dp"
	            android:orientation="horizontal" >
				<!-- 头像 -->
	            <ImageView
	                android:id="@+id/head"
	                android:layout_marginLeft="10dp"
	                android:layout_marginTop="5dp"
	                android:layout_width="50dp"
	                android:layout_height="50dp"
	                android:src="@drawable/user"/>
				
	            <!-- 用户名 -->
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:layout_marginTop="15dp"
	                android:layout_marginLeft="10dip"
	                android:textColor="@color/black"
	                android:textSize="@dimen/fifteen_size"
	                android:id="@+id/user_name" />
	        </LinearLayout>
	        
	        <!-- 原密码 -->
	        <LinearLayout style="@style/modify_user_layout"
	            android:layout_marginTop="15dp">
	            <TextView style="@style/modify_user_label" 
	                android:text="@string/account_password_old"/>
	            <EditText style="@style/modify_user_input"
	                android:id="@+id/old_passwd"/>
	        </LinearLayout>
	        
	        <!-- 新密码 -->
	        <LinearLayout style="@style/modify_user_layout">
	            <TextView style="@style/modify_user_label" 
	                android:text="@string/account_password_new"/>
	            <EditText style="@style/modify_user_input"
	                android:id="@+id/new_passwd"/>
	        </LinearLayout>
	        
	        <!-- 确认密码 -->
	        <LinearLayout style="@style/modify_user_layout">
	            <TextView style="@style/modify_user_label" 
	                android:text="@string/account_password_confirm"/>
	            <EditText style="@style/modify_user_input"
	                android:id="@+id/confirm_passwd"/>
	        </LinearLayout>
	        
	        <!-- 确认修改按钮 -->
	        <Button
	            android:id="@+id/account_button"
	            android:layout_width="fill_parent"
	            android:layout_height="40dp"
	            android:layout_marginTop="20dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:textSize="18sp"
	            android:text="@string/modify_passwd" >
	        </Button>
	        	        
	        <!-- 注销登录按钮 -->
	        <Button
	            android:id="@+id/logout_button"
	            android:layout_width="fill_parent"
	            android:layout_height="40dp"
	            android:layout_marginTop="20dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:textSize="18sp"
	            android:text="注销" >
	        </Button>
	
	        
	    </LinearLayout>
	</ScrollView>
    
</LinearLayout>
