<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/screen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#F0F0F0F0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/layout_top"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@drawable/tbarbg" >

                <!-- 显示左边框按钮 -->

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="30dip"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/logo" />

                <!-- 显示右边框按钮 -->

                <ImageButton
                    android:id="@+id/showRight"
                    android:layout_width="46dip"
                    android:layout_height="43dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/bg_radiobtn_normal"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dip"
                android:text="您访问的功能需要登录，您可以立即登录或注册体验精彩的资讯内参！" />

            <RelativeLayout
                android:id="@+id/login_div"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="15dip" >

                <TextView
                    android:id="@+id/login_user_input"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/login_label_username"
                    android:textSize="18dip" />

                <EditText
                    android:id="@+id/username_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/login_user_input"
                    android:layout_below="@+id/login_user_input"
                    android:layout_marginTop="5dip"
                    android:ems="11"
                    android:hint="@string/login_username_hint"
                    android:inputType="text"
                    android:singleLine="true" >
                </EditText>

                <TextView
                    android:id="@+id/login_password_input"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_edit"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_label_password"
                    android:textSize="18dip" />

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_password_input"
                    android:layout_marginTop="5dip"
                    android:inputType="textPassword"
                    android:password="true"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_edit"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/signin_button"
                        android:layout_width="145dip"
                        android:layout_height="50dip"
                        android:background="@drawable/bg_radiobtn_normal"
                        android:src="@drawable/login_btn" />

                    <ImageButton
                        android:id="@+id/register"
                        android:layout_width="145dip"
                        android:layout_height="50dip"
                        android:background="@drawable/bg_radiobtn_normal"
                        android:src="@drawable/zc" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>